# Gm05-8-support

./: .gitignore  Makefile  Makefile.am  Makefile.in  NTcomms.c  README  README.txt  aclocal.m4  bootstrap.sh  comms.h  config.h  config.h.in  config.status  configure  configure.ac  configure.in  dlltest.c  gm0.c  gm0.dsw  gm0.h  gm0.ncb  gm0.opt  gm0.plg  gm0.sln  gm0_private.h  libgm.so.1.0.0  libtool  linuxbuild.sh  resource.h  resource.rc
GM0Control/: CEventProxy.h  GM0Control2.cpp  GM0Control2.h  GM0Control2.htm  GM0Control2.rgs  GMControl2.aps  GMControl2.cpp  GMControl2.def  GMControl2.dsp  GMControl2.h  GMControl2.idl  GMControl2.plg  GMControl2.rc  GMControl2.tlb  GMControl2CP.h  GMControl2_i.c  GMControl2_p.c  GMControl2ps.def  GMControl2ps.mk  LICENCE.txt  StdAfx.cpp  StdAfx.h  dlldata.c  dlldatax.c  dlldatax.h  resource.h
HMI_Timer/: CEventProxy.h  HMI_timer.aps  HMI_timer.cpp  HMI_timer.def  HMI_timer.dsp  HMI_timer.h  HMI_timer.idl  HMI_timer.plg  HMI_timer.rc  HMI_timer.tlb  HMI_timerCP.h  HMI_timer_i.c  HMI_timer_p.c  HMI_timerps.def  HMI_timerps.mk  HirstTimer.cpp  HirstTimer.h  HirstTimer.htm  HirstTimer.rgs  LICENCE.txt  StdAfx.h  dlldata.c  resource.h
Installer/: gm0.nsi
apps/: GMExample2.xls  ScaleGM0.vi  gm-control-32.xls  gm-control-64.xls  gm05-control.xls  simplegm0-1-6.vi
consoleexample/: Makefile  Makefile.am  Makefile.in  consoleexample.c  consoleexample.dsp  consoleexample.plg  consoleexample.vcproj  consoleexample.vcxproj  consoleexample.vcxproj.filters  dlltest.c
docs/: GM05&08PROGRAMMING MANUAL.doc
gm0-sharp/: gm0-sharp.sln
(+117 files in other folders)
